# rd-burndown

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  compose.yml  pyproject.toml  test_connection.py
.devcontainer/: README.md  devcontainer.json
doc/: design.md
rd_burndown/: __init__.py
rd_burndown/cli/: __init__.py  chart.py  data.py  main.py  project.py
rd_burndown/core/: __init__.py  calculator.py  chart_generator.py  data_manager.py  database.py  models.py  redmine_client.py
rd_burndown/tests/: __init__.py  conftest.py  test_calculator.py  test_chart_generator.py  test_cli.py  test_cli_chart.py  test_cli_data.py  test_cli_project.py  test_config.py  test_data_manager.py  test_database.py  test_date_utils.py  test_helpers.py  test_models.py  test_redmine_client.py
rd_burndown/utils/: __init__.py  config.py  date_utils.py  helpers.py
scripts/: README.md  check_code_similarity.py  create_burndown_test_data.sh  create_test_issues.sh  init-redmine.rb  setup-admin.sh  setup_complete_test_environment.sh  update_issue_progress.sh
